Trying to fix name on mobile css

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ scroll-behavior: smooth;
 }
 body{
     overflow-x: hidden;
+    font-family: Helvetica,Tahoma;
 }
 /* 
 #load{
